--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,5 +11,10 @@ services:
       - "9001:9001/tcp"
     env_file:
       - $HOME/valheim-server/valheim.env
+    environment:
+      - SERVER_NAME=${SERVER_NAME}
+      - WORLD_NAME={WORLD_NAME}  
+      - SERVER_PASS={SERVER_PASS}
+      - SERVER_PUBLIC={SERVER_PUBLIC}
     restart: always
     stop_grace_period: 2m
