--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,8 @@ services:
       - $HOME/valheim-server/valheim.env
     environment:
       - SERVER_NAME=${SERVER_NAME}
-      - WORLD_NAME={WORLD_NAME}  
-      - SERVER_PASS={SERVER_PASS}
-      - SERVER_PUBLIC={SERVER_PUBLIC}
+      - WORLD_NAME=${WORLD_NAME}  
+      - SERVER_PASS=${SERVER_PASS}
+      - SERVER_PUBLIC=${SERVER_PUBLIC}
     restart: always
     stop_grace_period: 2m
