--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,14 @@ services:
     cap_add:
       - sys_nice
     volumes:
-      - $HOME/valheim-server/config:/config
-      - $HOME/valheim-server/data:/opt/valheim
+      - type: bind
+        source: $HOME/valheim-server/config
+        target: /config
+        is_directory: true # This will tell Coolify to create the directory (this is not available in a normal docker-compose)
+      - type: bind
+        source: $HOME/valheim-server/opt/valheim
+        target: opt/valheim
+        is_directory: true # This will tell Coolify to create the directory (this is not available in a normal docker-compose)
     ports:
       - "2456-2458:2456-2458/udp"
       - "9001:9001/tcp"
@@ -13,8 +19,8 @@ services:
       - $HOME/valheim-server/valheim.env
     environment:
       - SERVER_NAME=${SERVER_NAME}
-      - WORLD_NAME=${WORLD_NAME}  
-      - SERVER_PASS=${SERVER_PASS}
-      - SERVER_PUBLIC=${SERVER_PUBLIC}
+      - WORLD_NAME={WORLD_NAME}  
+      - SERVER_PASS={SERVER_PASS}
+      - SERVER_PUBLIC={SERVER_PUBLIC}
     restart: always
     stop_grace_period: 2m
